# sumi

./: .gitignore  App.xaml  App.xaml.cs  Cargo.toml  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  MemoStorage.cs  Package.appxmanifest  Program.cs  RtfToPlainTextConverter.cs  SaveScheduler.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  app.manifest  spec.md  stdout.txt  sumi.csproj  sumi.slnx  test_result.txt
Properties/: launchSettings.json
src/: atomic_save.rs  editor.rs  main.rs  win_util.rs
src/app/: app.rs
src/model/: state.rs
src/platform/: font.rs  window.rs
src/service/: scheduler.rs
src/storage/: config.rs  memo.rs  mod.rs  traits.rs
src/ui/: editor.rs  mod.rs  state.rs
